--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beast Tactics</title>
+    
+    <!-- Import map to resolve module specifiers -->
+    <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.162.0/examples/jsm/"
+      }
+    }
+    </script>
     <style>
         body {
             margin: 0;
