--- a/public/examples/animatedSpriteExample.html
+++ b/public/examples/animatedSpriteExample.html
@@ -67,7 +67,7 @@
 
     <script type="module">
         // Import dependencies
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
+        import * as THREE from '//libs/three/three.module.js';
         
         // Make THREE available globally for our modules that expect it
         window.THREE = THREE;
